@@ -2,6 +2,7 @@ Changes in libmpg123 libtool interface versions...
 
 36.0.36
 	- Extended MPG123_RESYNC_LIMIT to initial header search.
+	- Not cutting decoder delay unconditionally anymore (only in combination with known encoder delay / padding).
 
 35.0.35
 	- Added mpg123_meta_free().
